FIX (ci/cd) : adds step to install playwright

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -25,6 +25,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install
         run: npm install --no-save
+      - name: Install Playwright
+        run: npx playwright install
       - name: Test
         run: npm run test
   build-and-deploy:
