--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^1.0.1"
+		"@sveltejs/adapter-static": "^1.0.1",
+		"p5-svelte": "^3.1.2"
 	}
 }
