--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
+		"data:download": "git submodule update --init --recursive",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
