FEAT : adds the new data sync step to the github ci

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install
         run: npm install --no-save
+      - name: Sync data
+        run: npm run data:download
       - name: Build
         run: npm run build     
       - name: Deploy 
